crates/wac-parser/tests/resolution/fail/target-import-param-name-mismatch.wac
package test:comp targets test:comp/foo;

world foo {
    import foo: interface {
        foo: func(a: string);
    };
}

import foo2 as foo: interface {
    foo: func(x: u32);
};
